# beads_debian

./: AUTHORS  CMakeLists.txt  INSTALL  README
cmake_modules/: FindPTHREADSConfig.cmake
debian/: changelog  control  copyright  rules  watch
debian/patches/: installation.patch  qt5.patch  qt5_debug.patch  qt5_headers.patch  rpath.patch  series  use_debian_packaged_cimg.h
debian/upstream/: metadata
doc/: beads.html
doc/man1/: beads.1
share/applications/: beads.desktop
share/beads/: beads_blue.conf  beads_silver.conf  beads_silver_small.conf
src/: CImg.h  CMakeLists.txt  beads.cpp  beads.h  config.h  config.h.cmake  detection.cpp  detection.h  parameterDetection.cpp  parameterDetection.h  parameters.cpp  parameters.h  spot.cpp  spot.h  spotDocument.cpp  spotDocument.h  spotPROTICdbDocument.cpp  spotPROTICdbDocument.h  spotSvgDocument.cpp  spotSvgDocument.h  spot_document_gnumeric.cpp  spot_document_gnumeric.h
src/encode/: base64.cpp  base64.h
src/images/: imageCode.h  imageConfluent.cpp  imageConfluent.h  imageContours.cpp  imageContours.h  imageCoule.cpp  imageCoule.h  imageDeNovo.cpp  imageDeNovo.h  imageDetection.cpp  imageDetection.h  imageDirect.cpp  imageDirect.h  imageIntensity.cpp  imageIntensity.h  imageNumber.cpp  imageNumber.h  imagePaths.cpp  imagePaths.h  imageProb.cpp  imageProb.h  parameterConfluent.cpp  parameterConfluent.h  parameterDirect.h  parameterNumber.cpp  parameterNumber.h  parameterProb.cpp  parameterProb.h
src/qtbeads/: CMakeLists.txt  QCimg.cpp  QCimg.h  beads_results.cpp  beads_results.h  main_window.cpp  main_window.h  properties.cpp  properties.h  q_gel_image.cpp  q_gel_image.h  q_gel_image_scroll.cpp  q_gel_image_scroll.h  qtbeads.cpp  qtbeads_error.h
src/qtbeads/translations/: beads_fr.qm  beads_fr.ts
